Update sanity cli

--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
 		"@mailchimp/mailchimp_marketing": "^3.0.80",
 		"@portabletext/react": "^3.0.7",
 		"@sanity/code-input": "^4.1.1",
-		"@sanity/image-url": "^1.0.2",
+		"@sanity/image-url": "^1.1.0",
 		"@sanity/orderable-document-list": "^1.1.0",
-		"@sanity/vision": "^3.15.1",
+		"@sanity/vision": "^3.90.0",
 		"@sentry/nextjs": "^7.64.0",
 		"@svgr/webpack": "^8.1.0",
 		"@types/node": "20.5.7",
@@ -52,7 +52,7 @@
 		"framer-motion": "^10.16.1",
 		"md5": "^2.3.0",
 		"next": "^13.4.19",
-		"next-sanity": "^5.4.6",
+		"next-sanity": "^9.12.0",
 		"next-themes": "^0.2.1",
 		"nodemailer": "^6.9.4",
 		"prism-react-renderer": "^2.0.6",
@@ -61,10 +61,10 @@
 		"react-headroom": "^3.2.1",
 		"react-syntax-highlighter": "^15.5.0",
 		"react-typed": "^1.2.0",
-		"sanity": "^3.15.1",
+		"sanity": "^3.90.0",
 		"sanity-plugin-vercel-deploy": "^3.3.4",
 		"sharp": "^0.32.5",
-		"styled-components": "6.0.7",
+		"styled-components": "^6.1.18",
 		"typescript": "5.2.2",
 		"yup": "^1.2.0"
 	},
